@@ -1,6 +1,7 @@
 package com.quolance.quolance_api.unit;
 
 import com.quolance.quolance_api.controllers.FreelancerController;
+import com.quolance.quolance_api.dtos.PageableRequestDto;
 import com.quolance.quolance_api.dtos.application.ApplicationCreateDto;
 import com.quolance.quolance_api.dtos.application.ApplicationDto;
 import com.quolance.quolance_api.dtos.project.ProjectPublicDto;
@@ -9,6 +10,7 @@ import com.quolance.quolance_api.entities.enums.ApplicationStatus;
 import com.quolance.quolance_api.entities.enums.Role;
 import com.quolance.quolance_api.services.business_workflow.ApplicationProcessWorkflow;
 import com.quolance.quolance_api.services.business_workflow.FreelancerWorkflowService;
+import com.quolance.quolance_api.util.PaginationUtils;
 import com.quolance.quolance_api.util.SecurityUtil;
 import com.quolance.quolance_api.util.exceptions.ApiException;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,6 +20,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
@@ -44,6 +49,9 @@ class FreelancerControllerUnitTest {
     @InjectMocks
     private FreelancerController freelancerController;
 
+    @Mock
+    private PaginationUtils paginationUtils;
+
     private User mockFreelancer;
     private ApplicationCreateDto applicationCreateDto;
     private ApplicationDto applicationDto;
@@ -68,6 +76,9 @@ class FreelancerControllerUnitTest {
         projectPublicDto = new ProjectPublicDto();
         projectPublicDto.setId(1L);
         projectPublicDto.setTitle("Test Project");
+
+        lenient().when(paginationUtils.createPageable(any(PageableRequestDto.class))).thenReturn(Pageable.unpaged());
+
     }
 
     @Test
@@ -165,59 +176,197 @@ class FreelancerControllerUnitTest {
     }
 
     @Test
-    void getAllFreelancerApplications_ReturnsApplicationList() {
+    void getAllFreelancerApplications_ReturnsApplicationPage() {
         try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
             securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
-            List<ApplicationDto> applications = Arrays.asList(applicationDto);
-            when(freelancerWorkflowService.getAllFreelancerApplications(any(User.class))).thenReturn(applications);
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            Page<ApplicationDto> applicationsPage = new PageImpl<>(List.of(applicationDto));
 
-            ResponseEntity<List<ApplicationDto>> response = freelancerController.getAllFreelancerApplications();
+            when(freelancerWorkflowService.getAllFreelancerApplications(eq(mockFreelancer), any(Pageable.class)))
+                    .thenReturn(applicationsPage);
+
+            ResponseEntity<Page<ApplicationDto>> response = freelancerController.getAllFreelancerApplications(pageableRequest);
 
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).hasSize(1);
-            assertThat(response.getBody().get(0)).isEqualTo(applicationDto);
-            assertThat(response.getBody().get(0).getStatus()).isEqualTo(ApplicationStatus.APPLIED);
-            verify(freelancerWorkflowService).getAllFreelancerApplications(eq(mockFreelancer));
+            assertThat(response.getBody().getContent()).hasSize(1);
+            assertThat(response.getBody().getContent().get(0)).isEqualTo(applicationDto);
+            assertThat(response.getBody().getContent().get(0).getStatus()).isEqualTo(ApplicationStatus.APPLIED);
+            verify(freelancerWorkflowService).getAllFreelancerApplications(eq(mockFreelancer), any(Pageable.class));
         }
     }
 
     @Test
-    void getAllFreelancerApplications_ReturnsEmptyList() {
+    void getAllFreelancerApplications_ReturnsEmptyPage() {
         try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
             securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
-            when(freelancerWorkflowService.getAllFreelancerApplications(any(User.class)))
-                    .thenReturn(Collections.emptyList());
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            Page<ApplicationDto> emptyPage = Page.empty();
 
-            ResponseEntity<List<ApplicationDto>> response = freelancerController.getAllFreelancerApplications();
+            when(freelancerWorkflowService.getAllFreelancerApplications(eq(mockFreelancer), any(Pageable.class)))
+                    .thenReturn(emptyPage);
+
+            ResponseEntity<Page<ApplicationDto>> response = freelancerController.getAllFreelancerApplications(pageableRequest);
 
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isEmpty();
-            verify(freelancerWorkflowService).getAllFreelancerApplications(eq(mockFreelancer));
+            assertThat(response.getBody().getContent()).isEmpty();
+            verify(freelancerWorkflowService).getAllFreelancerApplications(eq(mockFreelancer), any(Pageable.class));
         }
     }
 
     @Test
-    void getAllAvailableProjects_ReturnsProjectList() {
-        List<ProjectPublicDto> projects = Arrays.asList(projectPublicDto);
-        when(freelancerWorkflowService.getAllAvailableProjects()).thenReturn(projects);
+    void getAllFreelancerApplications_WithInvalidPageSize_ThrowsApiException() {
+        try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+            securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            pageableRequest.setSize(101);
 
-        ResponseEntity<List<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects();
+            when(paginationUtils.createPageable(eq(pageableRequest)))
+                    .thenThrow(new ApiException("Page size must not be greater than 100"));
 
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).hasSize(1);
-        assertThat(response.getBody().get(0)).isEqualTo(projectPublicDto);
-        verify(freelancerWorkflowService).getAllAvailableProjects();
+            assertThatThrownBy(() -> freelancerController.getAllFreelancerApplications(pageableRequest))
+                    .isInstanceOf(ApiException.class)
+                    .hasMessage("Page size must not be greater than 100");
+        }
     }
 
     @Test
-    void getAllAvailableProjects_ReturnsEmptyList() {
-        when(freelancerWorkflowService.getAllAvailableProjects()).thenReturn(Collections.emptyList());
+    void getAllFreelancerApplications_WithCustomPage_ReturnsCorrectPage() {
+        try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+            securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
 
-        ResponseEntity<List<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects();
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            pageableRequest.setPage(2);
+            Pageable customPageable = mock(Pageable.class);
+            when(customPageable.getPageNumber()).thenReturn(2);
+
+            when(paginationUtils.createPageable(eq(pageableRequest))).thenReturn(customPageable);
+            when(freelancerWorkflowService.getAllFreelancerApplications(eq(mockFreelancer), eq(customPageable)))
+                    .thenReturn(new PageImpl<>(List.of(applicationDto)));
+
+            ResponseEntity<Page<ApplicationDto>> response = freelancerController.getAllFreelancerApplications(pageableRequest);
+
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+            verify(paginationUtils).createPageable(argThat(pr ->
+                    pr.getPage() == 2
+            ));
+            verify(freelancerWorkflowService).getAllFreelancerApplications(
+                    eq(mockFreelancer),
+                    argThat(p -> p.getPageNumber() == 2)
+            );
+        }
+    }
+
+    @Test
+    void getAllFreelancerApplications_WithCustomSortDirection_ReturnsSortedResults() {
+        try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+            securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
+
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            pageableRequest.setSortDirection("asc");
+            Pageable customPageable = mock(Pageable.class);
+
+            when(paginationUtils.createPageable(eq(pageableRequest))).thenReturn(customPageable);
+            when(freelancerWorkflowService.getAllFreelancerApplications(eq(mockFreelancer), eq(customPageable)))
+                    .thenReturn(new PageImpl<>(List.of(applicationDto)));
+
+            ResponseEntity<Page<ApplicationDto>> response = freelancerController.getAllFreelancerApplications(pageableRequest);
+
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+            verify(paginationUtils).createPageable(argThat(pr ->
+                    pr.getSortDirection().equals("asc")
+            ));
+        }
+    }
+
+    @Test
+    void getAllFreelancerApplications_WithZeroPageSize_ThrowsApiException() {
+        try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+            securityUtil.when(SecurityUtil::getAuthenticatedUser).thenReturn(mockFreelancer);
+
+            PageableRequestDto pageableRequest = new PageableRequestDto();
+            pageableRequest.setSize(0);
+
+            when(paginationUtils.createPageable(eq(pageableRequest)))
+                    .thenThrow(new ApiException("Page size must be greater than zero"));
+
+            assertThatThrownBy(() -> freelancerController.getAllFreelancerApplications(pageableRequest))
+                    .isInstanceOf(ApiException.class)
+                    .hasMessage("Page size must be greater than zero");
+        }
+    }
+
+    @Test
+    void getAllAvailableProjects_ReturnsProjectPage() {
+        Page<ProjectPublicDto> projectPage = new PageImpl<>(Collections.singletonList(projectPublicDto));
+
+        when(freelancerWorkflowService.getAllAvailableProjects(any(Pageable.class))).thenReturn(projectPage);
+
+        PageableRequestDto pageableRequest = new PageableRequestDto();
+        ResponseEntity<Page<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects(pageableRequest);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isEmpty();
-        verify(freelancerWorkflowService).getAllAvailableProjects();
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getContent()).hasSize(1);
+        assertThat(response.getBody().getContent().get(0)).isEqualTo(projectPublicDto);
+        verify(freelancerWorkflowService).getAllAvailableProjects(any(Pageable.class));
+    }
+
+    @Test
+    void getAllAvailableProjects_ReturnsEmptyPage() {
+
+        Page<ProjectPublicDto> emptyPage = Page.empty();
+
+        when(freelancerWorkflowService.getAllAvailableProjects(any(Pageable.class))).thenReturn(emptyPage);
+
+        PageableRequestDto pageableRequest = new PageableRequestDto();
+        ResponseEntity<Page<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects(pageableRequest);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getContent()).isEmpty();
+        verify(freelancerWorkflowService).getAllAvailableProjects(any(Pageable.class));
+    }
+
+    @Test
+    void getAllAvailableProjects_WithCustomPageSize_ReturnsCorrectPageSize() {
+        PageableRequestDto pageableRequest = new PageableRequestDto();
+        pageableRequest.setSize(5);
+        Pageable customPageable = mock(Pageable.class);
+        when(customPageable.getPageSize()).thenReturn(5);
+
+        when(paginationUtils.createPageable(eq(pageableRequest))).thenReturn(customPageable);
+        when(freelancerWorkflowService.getAllAvailableProjects(eq(customPageable)))
+                .thenReturn(new PageImpl<>(List.of(projectPublicDto)));
+
+        ResponseEntity<Page<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects(pageableRequest);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        verify(paginationUtils).createPageable(argThat(pr ->
+                pr.getSize() == 5
+        ));
+        verify(freelancerWorkflowService).getAllAvailableProjects(argThat(p ->
+                p.getPageSize() == 5
+        ));
+    }
+
+    @Test
+    void getAllAvailableProjects_WithCustomSortField_ReturnsSortedResults() {
+        PageableRequestDto pageableRequest = new PageableRequestDto();
+        pageableRequest.setSortBy("createdDate");
+        pageableRequest.setSortDirection("asc");
+        Pageable customPageable = mock(Pageable.class);
+
+        when(paginationUtils.createPageable(eq(pageableRequest))).thenReturn(customPageable);
+        when(freelancerWorkflowService.getAllAvailableProjects(eq(customPageable)))
+                .thenReturn(new PageImpl<>(List.of(projectPublicDto)));
+
+        ResponseEntity<Page<ProjectPublicDto>> response = freelancerController.getAllAvailableProjects(pageableRequest);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        verify(paginationUtils).createPageable(argThat(pr ->
+                pr.getSortBy().equals("createdDate") &&
+                        pr.getSortDirection().equals("asc")
+        ));
     }
 
     @Test
